session timeout 설정 및 코드 정리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,14 +14,14 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.web.resources.cache.period=0
 
-server.servlet.session.timeout=3600s
+server.servlet.session.timeout=-1
 
 # server.port = 0
 
 # LOGGING
 logging.level.kr.co.divus.home.controller.APIController=trace
-api.photo.path=d:/divusLog/photo/
-api.excel.path=d:/divusLog/excel/
+api.photo.path=c:/divusLog/photo/
+api.excel.path=c:/divusLog/excel/
 
 #api.photo.path=C:/log/photo/
 
