--- a/pom.xml
+++ b/pom.xml
@@ -172,18 +172,13 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-		
-
-
-		
-
-
-
-
-
-
-	
-
+		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
 
 	</dependencies>
 
@@ -192,7 +187,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				
 				<!--configuration>
 					<jvmArguments>
 							-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
