--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ server.servlet.session.timeout=-1
 
 # LOGGING
 logging.level.kr.co.divus.home.controller.APIController=trace
-api.photo.path=c:/divusLog/photo/
-api.excel.path=c:/divusLog/excel/
+api.photo.path=d:/divusLog/photo/
+api.excel.path=d:/divusLog/excel/
 
 #api.photo.path=C:/log/photo/
 
